--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-sass": "^8.0.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "parcel": "^2.8.3",
     "pug": "^3.0.2",
     "sass": "^1.62.1",
+    "sharp": "^0.32.1",
     "slugify": "^1.6.6",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
