--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sass": "^1.62.1",
     "sharp": "^0.32.1",
     "slugify": "^1.6.6",
+    "stripe": "^7.0.0",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
   },
