Ready for FIRST DEPLOYMENT🚀

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js",
-    "build": "parcel build ./public/js/index.js --dist-dir ./public/js/bundled",
-    "watch:js": "parcel watch ./public/js/index.js --dist-dir ./public/js/bundled"
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Jesus Gutierrez",
   "license": "ISC",
@@ -47,6 +47,6 @@
     "buffer": "^5.7.1",
     "mongoose": "^7.0.3",
     "ndb": "^1.1.5",
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.12.3"
   }
 }
