--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "main": false
   },
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
@@ -48,5 +49,8 @@
     "mongoose": "^7.0.3",
     "ndb": "^1.1.5",
     "parcel-bundler": "^1.12.3"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
