--- a/package.json
+++ b/package.json
@@ -46,11 +46,12 @@
   },
   "devDependencies": {
     "buffer": "^5.7.1",
-    "mongoose": "^7.0.3",
+    "mongoose": "^5.13.19",
     "ndb": "^1.1.5",
     "parcel-bundler": "^1.12.3"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": "18.16.0",
+    "npm": "9.5.1"
   }
 }
