--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "main": false
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node src/server.js",
     "dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js",
