--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "primrose",
   "version": "1.0.0",
-  "description": "e-commerce web application",
+  "description": "e-commerce web application with node, exress, and mangoDB",
   "targets": {
     "main": false
   },
@@ -32,6 +32,7 @@
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "mongoose": "^5.13.19",
     "multer": "^1.4.5-lts.1",
     "node-sass": "^8.0.0",
     "nodemailer": "^6.9.1",
@@ -47,7 +48,6 @@
   },
   "devDependencies": {
     "buffer": "^5.7.1",
-    "mongoose": "^5.13.19",
     "ndb": "^1.1.5",
     "parcel-bundler": "^1.12.3"
   },
