--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start:prod": "NODE_ENV=production & nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js dist-dir ./public/js dist-file bundle.js",
-    "build:js": "parcel build ./public/js/index.js dist-dir ./public/js dist-file bundle.js"
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url ."
   },
   "author": "Jesus Gutierrez",
   "license": "ISC",
